# Stonky

./: .gitignore  Dockerfile  README.md  main.py  predict.py  pyproject.toml
data/: AAPL.csv  GOOG.csv  ticker_cheatsheet.json
docs/: Project_Report.md  Readme.md  next_step.md
models/: AAPL_scaler.pkl  AAPL_stonky.h5  GOOG_scaler.pkl  GOOG_stonky.h5  {stock}_stonky.h5
notebooks/: experiment.ipynb
src/: api.py  app.py  config.py  download.py  logging_config.py  model.py  refresh.py
test/: test.py
