[project]
name = "stonky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "gradio>=5.35.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.64",
]
